tests/ui/unop-neg-bool.rs
fn main() {
    -true; //~ ERROR cannot apply unary operator `-` to type `bool`
}
